reglage des images et des textes sous images

--- a/newsletter.html
+++ b/newsletter.html
@@ -25,40 +25,68 @@
                     </h2>
                 </tr>
                 <tr>
-                    <td
-                        style="background-image:url(https://i.goopics.net/WD0ee.jpg); width:150px; height:220px; text-align:center; color:white;">
+                    <td style="background-image:url(https://i.goopics.net/WD0ee.jpg); width:145px; height:220px; text-align:center; color:white;">
                     </td>
-                    <td
-                        style="background-image:url(https://i.goopics.net/nQDbJ.jpg); width:150px; height:180px; text-align:center; color:white;">
+                    <td style="background-image:url(https://i.goopics.net/nQDbJ.jpg); width:145px; height:220px; text-align:center; color:white;">
                     </td>
-                    <td
-                        style="background-image:url(https://i.goopics.net/Gxae7.jpg); width:150px; height:180px; text-align:center; color:white;">
+                    <td style="background-image:url(https://i.goopics.net/Gxae7.jpg); width:145px; height:220px; text-align:center; color:white;">
                     </td>
-                    <td
-                        style="background-image:url(https://i.goopics.net/eX1bW.jpg); width:150px; height:180px; text-align:center; color:white;">
+                    <td style="background-image:url(https://i.goopics.net/eX1bW.jpg); width:145px; height:220px; text-align:center; color:white;">
                     </td>
                 </tr>
+            <tbody>
+        </table>
+        <table>
+            <tbody>
+                <tr>
+                    <td style="text-align: center;">
+                        <p style="color:#ff4140; font-weight:bolder;"> Nouveauté exclus 2018</p>
+                    </td>
+                    <td style="text-align: center;">
+                        <p style="color:#ff4140; font-weight:bolder;"> Nouveauté exclus 2018</p>
+                    </td>
+                    <td style="text-align: center;">
+                        <p style="color:#ff4140; font-weight:bolder;"> Nouveauté exclus 2018</p>
+                    </td>
+                    <td style="text-align: center;">
+                        <p style="color:#ff4140; font-weight:bolder;"> Nouveauté exclus 2019</p>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
                 <table>
                     <tbody>
                         <tr>
                             <td>
                                 <p
-                                    style="background-color:#536177; font-family:Arial; border-style:solid; border-width: 2px; width:600px; height:80px; margin:auto; text-align:center; color:white;">
+                                    style="background-color:#536177; font-family:Arial; width:600px; height:80px; margin:auto; text-align:center; color:white;">
                                     hola </p>
                             </td>
                         </tr>
                         <tr>
-                            <td
-                                style="background-image: url(https://i.goopics.net/7oAjN.jpg); font-family:Arial; width:150px; height:220px; text-align:center; color:white;">
+                            <td>
+                                <a href="#"> <img src="https://i.goopics.net/7oAjN.jpg" style="font-family:Arial; width:145px; height:220px; text-align:center; color:white;"/> </a>
+                                <a href="#"> <img src="https://i.goopics.net/AqELw.jpg" style="font-family:Arial; width:145px; height:220px; text-align:center; color:white;"/> </a>
+                                <a href="#"> <img src="https://i.goopics.net/b9Lv0.jpg" style="font-family:Arial; width:145px; height:220px; text-align:center; color:white;"/> </a>
+                                <a href="#"> <img src="https://i.goopics.net/nQDyJ.jpg" style="font-family:Arial; width:145px; height:220px; text-align:center; color:white;"/> </a>
                             </td>
-                            <td
-                                style="background-image: url(https://i.goopics.net/AqELw.jpg); font-family:Arial; width:150px; height:220px; text-align:center; color:white;">
+                        </tr>
+                    </tbody>
+                </table>
+                <table>
+                    <tbody>
+                        <tr>
+                            <td style="text-align: center;"> 
+                                <p style="color:#ff4140; font-weight: bolder;"> Ajout Episode 16 Saison 9</p>
                             </td>
-                            <td
-                                style="background-image: url(https://i.goopics.net/b9Lv0.jpg); font-family:Arial; width:150px; height:220px; text-align:center; color:white;">
+                            <td style="text-align: center;">
+                                <p style="color:#ff4140; font-weight: bolder;"> Ajout Episode 12 Saison 16</p>
                             </td>
-                            <td
-                                style="background-image: url(https://i.goopics.net/nQDyJ.jpg); font-family:Arial; width:150px; height:220px; text-align:center; color:white;">
+                            <td style="text-align: center;">
+                                <p style="color:#ff4140; font-weight: bolder;"> Ajout Episode 15 Saison 3</p>
+                            </td>
+                            <td style="text-align: center;">
+                                <p style="color:#ff4140; font-weight: bolder;"> Ajout Episode 25 Saison 15</p>
                             </td>
                         </tr>
                     </tbody>
@@ -68,7 +96,7 @@
                         <tr>
                             <td>
                                 <p
-                                    style="background-color:#536177; font-family:Arial; border-style:solid; border-width: 2px; width:600px; height:80px; margin:auto; text-align:center; color:white;">
+                                    style="background-color:#536177; font-family:Arial; width:600px; height:80px; margin:auto; text-align:center; color:white;">
                                     hey </p>
                             </td>
                         </tr>
@@ -79,7 +107,7 @@
                         <tr>
                             <td>
                                 <p
-                                    style="background-color:#536177; font-family:Arial; border-style:solid; border-width: 2px; width:600px; height:40px; margin:auto; text-align:center; color:white; font-size:30px;">
+                                    style="background-color:#536177; font-family:Arial; width:600px; height:40px; margin:auto; text-align:center; color:white; font-size:30px;">
                                     Les promos du passés </p>
                             </td>
                         </tr>
@@ -91,7 +119,7 @@
                         <table style="background-color: black; width:100%;">
                             <tbody>
                                 <tr>
-                                    <td style="padding-top:10px; padding-bottom:5px; text-align:center;">
+                                    <td style="text-align:center;">
                                         <span
                                             style="font-family: Arial; font-size: 15px; letter-spacing: 1; color: white;">
                                             Rejoignez-nous sur : </span>
@@ -103,9 +131,9 @@
                                             <tbody>
                                                 <tr>
                                                     <td
-                                                        style="padding-right: 0px; padding-left: 0px; width: 100%; text-align: center;">
+                                                        style="width: 100%; text-align: center;">
                                                         <p> <img class="facebook" src="assets/img/font/Facebook.jpg"
-                                                                style="width: 30px; height: 30px;               border-radius:20px;">
+                                                                style="width: 30px; height: 30px;border-radius:20px;">
                                                             <img class="twitter" src="assets/img/font/twitter.jpg"
                                                                 style="width: 30px; height: 30px; border-radius:20px;">
                                                             <img class="youtube" src="assets/img/font/youtube.jpg"
