modification des images des icons

--- a/newsletter.html
+++ b/newsletter.html
@@ -132,15 +132,15 @@
                                                 <tr>
                                                     <td
                                                         style="width: 100%; text-align: center;">
-                                                        <p> <img class="facebook" src="assets/img/font/Facebook.jpg"
+                                                        <p> <img class="facebook" src="https://i.goopics.net/WDaQr.jpg"
                                                                 style="width: 30px; height: 30px;border-radius:20px;">
-                                                            <img class="twitter" src="assets/img/font/twitter.jpg"
+                                                            <img class="twitter" src="https://i.goopics.net/QljmV.jpg"
                                                                 style="width: 30px; height: 30px; border-radius:20px;">
-                                                            <img class="youtube" src="assets/img/font/youtube.jpg"
+                                                            <img class="youtube" src="https://i.goopics.net/1oPXo.jpg"
                                                                 style="width: 30px; height: 30px; border-radius:20px;">
-                                                            <img class="linkedin" src="assets/img/font/linkedin.jpg"
+                                                            <img class="linkedin" src="https://i.goopics.net/loVmp.jpg"
                                                                 style="width: 30px; height: 30px; border-radius:20px;">
-                                                            <img class="google+" src="assets/img/font/google+.jpg"
+                                                            <img class="google+" src="https://i.goopics.net/b9pgK.jpg"
                                                                 style="width: 30px; height: 30px; border-radius:20px;">
                                                         </p>
                                                     </td>
