--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
             </div>
         </div>
         <div class="row d-flex justify-content-center">
-            <div class="col-4">
-                <form>
-                    <div class="form-group">
+            <div class="col-3">
+                <div>
                     <input type="email" class="form-control" id="formail" placeholder="Enter your email...">
-                    </div>
-                </form>
+                </div>  
+            </div>
+            <div>
+                <button type="button" class="btn btn-danger">Subscribe</button>
             </div>
         </div>
         <!-- Lisibilité  html-->
