modification des blocs titres , ajout des images et changement de couleur de la police et de la taille

--- a/newsletter.html
+++ b/newsletter.html
@@ -19,8 +19,7 @@
                     </h1>
                 </tr>
                 <tr>
-                    <h2
-                        style="background-color: #536177; font-family:Arial; width:600px; height:80px; margin:auto; padding-top: 2%;text-align:center; color:white; text-shadow: 2px 2px 3px black">
+                    <h2 style="background-image: url(https://i.goopics.net/5DZVb.jpg); font-family:Arial; width:600px; height:80px; margin:auto;text-align:center;color:#ff4140; text-shadow: 2px 2px 3px black; font-size:30px; letter-spacing: 1;">
                         <p>Les derniers films à l'affiche</p>
                     </h2>
                 </tr>
@@ -96,8 +95,8 @@
                         <tr>
                             <td>
                                 <p
-                                    style="background-color:#536177; font-family:Arial; width:600px; height:80px; margin:auto; text-align:center; color:white;">
-                                    hey </p>
+                                    style="background-color:#536177; font-family:Arial; width:600px; height:80px; margin:auto; text-align:center; color:white; font-size: 30px;">
+                                    </p>
                             </td>
                         </tr>
                     </tbody>
