ajout de images dans les blocks titre

--- a/newsletter.html
+++ b/newsletter.html
@@ -55,13 +55,11 @@
         </table>
                 <table>
                     <tbody>
-                        <tr>
-                            <td>
-                                <p
-                                    style="background-color:#536177; font-family:Arial; width:600px; height:80px; margin:auto; text-align:center; color:white;">
-                                    hola </p>
-                            </td>
-                        </tr>
+                            <tr>
+                                    <h2 style="background-image: url(https://i.goopics.net/308Aj.jpg); font-family:Arial; width:600px; height:80px; margin:auto;text-align:center;color:#ff4140; text-shadow: 2px 2px 3px black; font-size:30px; letter-spacing: 1;">
+                                        <p>Vos séries préférées</p>
+                                    </h2>
+                                </tr>
                         <tr>
                             <td>
                                 <a href="#"> <img src="https://i.goopics.net/7oAjN.jpg" style="font-family:Arial; width:145px; height:220px; text-align:center; color:white;"/> </a>
