sections horreur et promo

--- a/newsletter.html
+++ b/newsletter.html
@@ -317,16 +317,16 @@
 
 <body style="width:600px; margin:auto;">
     <table>
-        <!--entête-->
+<!--entête-->
         <tr><a href="#">
                 <h1
                     style="background-image:url(https://i.goopics.net/anAY0.jpg); font-family:Arial; width:600px; height:100px; padding-top: 2%; margin-bottom: 5px; text-align:center; color: #ff4140">
                 </h1>
         </tr></a>
-        <!--section films-->
+<!--section films-->
         <tr>
             <h2
-                style="background-color: #3F372C; font-family:Arial; width:600px; height:50px; margin:auto; padding-top: 1%;text-align:center; font-size: 2em; color:white; text-shadow: 2px 2px 3px black">
+                style="background-color: #3F372C; font-family:Arial; width:600px; height:50px; margin:auto; padding-top: 1%;text-align:center; font-size: 1.8em; color:white; text-shadow: 2px 2px 3px black">
                 Les derniers films à l'affiche</h2>
 
         </tr>
@@ -373,14 +373,13 @@
         </tbody>
     </table>
 
-    <!--section séries-->
+<!--section séries-->
     <table style="width: 100%;">
         <tbody>
             <tr>
                 <td>
-                    <p
-                        style="background-color:#536177; font-family:Arial; width:600px; height:80px; margin:auto; text-align:center; color:white;">
-                        hola </p>
+                    <h2
+                        style="background-color:#3f372c; font-family:Arial; width:600px; height:50px; margin:auto; padding-top: 2%; text-align:center; color:white;font-size: 1.8em; ; text-shadow: 2px 2px 3px black">Les épisodes de vos séries préférées</h2>
                 </td>
             </tr>
             <tr>
@@ -411,16 +410,36 @@
             </tr>
         </tbody>
     </table>
-    <!--section horreur-->
+<!--section horreur-->
     <table>
         <tr>
         <tr>
-            <p
-                style="background-color: #3f372c; font-family:Arial; width:600px; height:80px; margin:auto; text-align:center; color:white;">
-            </p>
-        </tr>
+                <td
+                style="background-image: url(https://i.goopics.net/rY41D.jpg); background-size: cover; font-family:Arial; width:600px; height:326px; margin:auto; text-align:center; color:white;">
+                <a href="#" style="text-decoration: none; color:white;"><p style="font-size: 1.7em;">Tous les vendredis 3 films d'horreur à la suite !!!</p></a>
+        </td>
+       
+    </tr>
         </tr>
     </table>
+<!--Les promo du passé-->
+    <table>
+        <tr>
+        <tr>
+                <h2
+                style="background-color:#3f372c; font-family:Arial; width:600px; height:50px; margin:auto; padding-top: 2%; text-align:center; color:white;font-size: 1.8em; ; text-shadow: 2px 2px 3px black">Les promos du passé</h2>
+        </tr>
+        </tr>
+        <tr>
+            <td>
+                <a href="#"> <img src="https://i.goopics.net/nQ9W1.jpg" style="font-family:Arial; width:145px; height:220px; text-align:center; color:white;"/> </a>
+                <a href="#"> <img src="https://i.goopics.net/92A43.jpg" style="font-family:Arial; width:145px; height:220px; text-align:center; color:white;"/> </a>
+                <a href="#"> <img src="https://i.goopics.net/Xjngp.jpg" style="font-family:Arial; width:145px; height:220px; text-align:center; color:white;"/> </a>
+                <a href="#"> <img src="https://i.goopics.net/deAkL.jpg" style="font-family:Arial; width:145px; height:220px; text-align:center; color:white;"/> </a>
+            </td>
+        </tr>
+    </table>
+<!--Footer-->    
     <table style="background-color: black; width:100%;">
         <tbody>
             <tr>
