--- a/newsletter.html
+++ b/newsletter.html
@@ -56,10 +56,10 @@
                 <table>
                     <tbody>
                             <tr>
-                                    <h2 style="background-image: url(https://i.goopics.net/308Aj.jpg); font-family:Arial; width:600px; height:80px; margin:auto;text-align:center;color:#ff4140; text-shadow: 2px 2px 3px black; font-size:30px; letter-spacing: 1;">
-                                        <p>Vos séries préférées</p>
-                                    </h2>
-                                </tr>
+                                <h2 style="background-image: url(https://i.goopics.net/308Aj.jpg); font-family:Arial; width:600px; height:80px; margin:auto;text-align:center;color:#ff4140; text-shadow: 2px 2px 3px black; font-size:30px; letter-spacing: 1;">
+                                    <p>Vos séries préférées</p>
+                                </h2>
+                            </tr>
                         <tr>
                             <td>
                                 <a href="#"> <img src="https://i.goopics.net/7oAjN.jpg" style="font-family:Arial; width:145px; height:220px; text-align:center; color:white;"/> </a>
@@ -102,11 +102,9 @@
                 <table>
                     <tbody>
                         <tr>
-                            <td>
-                                <p
-                                    style="background-color:#536177; font-family:Arial; width:600px; height:40px; margin:auto; text-align:center; color:white; font-size:30px;">
-                                    Les promos du passés </p>
-                            </td>
+                            <h2 style="background-image: url(https://i.goopics.net/oKexW.jpg); font-family:Arial; width:600px; height:80px; margin:auto;text-align:center;color:white; font-size:30px; letter-spacing: 1;">
+                                <p>Les promos du passé</p>
+                            </h2>
                         </tr>
                     </tbody>
                 </table>
