ajout des images

--- a/newsletter.html
+++ b/newsletter.html
@@ -19,8 +19,8 @@
                     </h1>
                 </tr>
                 <tr>
-                    <h2 style="background-image: url(https://i.goopics.net/5DZVb.jpg); font-family:Arial; width:600px; height:80px; margin:auto;text-align:center;color:#ff4140; text-shadow: 2px 2px 3px black; font-size:30px; letter-spacing: 1;">
-                        <p>Les derniers films à l'affiche</p>
+                    <h2 style="background-image: url(https://i.goopics.net/5DZVb.jpg); font-family:Arial; width:600px; height:60px; margin:auto;text-align:center;color:#ff4140; text-shadow: 2px 2px 3px black; font-size:30px; letter-spacing: 3px;">
+                    <p>Les derniers films à l'affiche</p>
                     </h2>
                 </tr>
                 <tr>
@@ -56,7 +56,7 @@
                 <table>
                     <tbody>
                             <tr>
-                                <h2 style="background-image: url(https://i.goopics.net/308Aj.jpg); font-family:Arial; width:600px; height:80px; margin:auto;text-align:center;color:#ff4140; text-shadow: 2px 2px 3px black; font-size:30px; letter-spacing: 1;">
+                                <h2 style="font-family:Arial; width:600px; height:80px; margin:auto;text-align:center;color:black; text-shadow: 2px 2px 3px black; font-size:30px; letter-spacing:3px;">
                                     <p>Vos séries préférées</p>
                                 </h2>
                             </tr>
