--- a/newsletter.html
+++ b/newsletter.html
@@ -326,8 +326,7 @@
 <!--section films-->
         <tr>
             <h2
-                style="background-color: #3F372C; font-family:Arial; width:600px; height:50px; margin:auto; padding-top: 1%;text-align:center; font-size: 1.8em; color:white; text-shadow: 2px 2px 3px black">
-                Les derniers films à l'affiche</h2>
+                style="background-image:url(https://i.goopics.net/x3RlE.jpg);background-size: cover; font-family:Arial; width:600px; height:50px; margin:auto; padding-top: 2%; text-align:center; font-size: 1.8em;letter-spacing: 2px; color: #ff4140; text-shadow: 2px 2px 3px black">Les derniers films à l'affiche</h2>
 
         </tr>
         <tr>
@@ -379,7 +378,7 @@
             <tr>
                 <td>
                     <h2
-                        style="background-color:#3f372c; font-family:Arial; width:600px; height:50px; margin:auto; padding-top: 2%; text-align:center; color:white;font-size: 1.8em; ; text-shadow: 2px 2px 3px black">Les épisodes de vos séries préférées</h2>
+                        style="background-image:url(https://i.goopics.net/92AR3.jpg); background-size: cover; font-family:Arial; width:600px; height:50px; margin:auto; padding-top: 2%; text-align:center; color:white;font-size: 1.8em; ; text-shadow: 2px 2px 3px black">Les épisodes de vos séries préférées</h2>
                 </td>
             </tr>
             <tr>
@@ -427,7 +426,7 @@
         <tr>
         <tr>
                 <h2
-                style="background-color:#3f372c; font-family:Arial; width:600px; height:50px; margin:auto; padding-top: 2%; text-align:center; color:white;font-size: 1.8em; ; text-shadow: 2px 2px 3px black">Les promos du passé</h2>
+                style="background-image:url(https://i.goopics.net/koqwp.jpg); font-family:Arial; width:600px; height:50px; margin:auto; padding-top: 2%; text-align:center; color:white;font-size: 1.8em; ; text-shadow: 2px 2px 3px black">Les promos du passé</h2>
         </tr>
         </tr>
         <tr>
