--- a/newsletter.html
+++ b/newsletter.html
@@ -317,16 +317,17 @@
 
 <body style="width:600px; margin:auto;">
     <table>
-<!--entête-->
+        <!--entête-->
         <tr><a href="#">
                 <h1
                     style="background-image:url(https://i.goopics.net/anAY0.jpg); font-family:Arial; width:600px; height:100px; padding-top: 2%; margin-bottom: 5px; text-align:center; color: #ff4140">
                 </h1>
         </tr></a>
-<!--section films-->
+        <!--section films-->
         <tr>
             <h2
-                style="background-image:url(https://i.goopics.net/x3RlE.jpg);background-size: cover; font-family:Arial; width:600px; height:50px; margin:auto; padding-top: 2%; text-align:center; font-size: 1.8em;letter-spacing: 2px; color: #ff4140; text-shadow: 2px 2px 3px black">Les derniers films à l'affiche</h2>
+                style="background-image:url(https://i.goopics.net/x3RlE.jpg);background-size: cover; font-family:Arial; width:600px; height:50px; margin:auto; padding-top: 2%; text-align:center; font-size: 1.8em;letter-spacing: 2px; color: #ff4140; text-shadow: 2px 2px 3px black">
+                Les derniers films à l'affiche</h2>
 
         </tr>
         <tr>
@@ -350,43 +351,52 @@
             <tr>
                 <td style="text-align: center;">
 
-                    <p style="color:#ff4140; font-weight: bolder;"> Nouveauté exclus 2018</p>
+                    <p style="color:#737373; font-weight: bolder;"> Nouveauté exclus 2018</p>
 
                 </td>
                 <td style="text-align: center;">
 
-                    <p style="color:#ff4140; font-weight: bolder;"> Nouveauté exclus 2018</p>
+                    <p style="color:#737373; font-weight: bolder;"> Nouveauté exclus 2018</p>
 
                 </td>
                 <td style="text-align: center;">
 
-                    <p style="color:#ff4140; font-weight: bolder;"> Nouveauté exclus 2018</p>
+                    <p style="color:#737373; font-weight: bolder;"> Nouveauté exclus 2018</p>
 
                 </td>
                 <td style="text-align: center;">
 
-                    <p style="color:#ff4140; font-weight: bolder;"> Nouveauté exclus 2019</p>
+                    <p style="color:#737373; font-weight: bolder;"> Nouveauté exclus 2019</p>
 
                 </td>
             </tr>
         </tbody>
     </table>
 
-<!--section séries-->
+    <!--section séries-->
     <table style="width: 100%;">
         <tbody>
             <tr>
                 <td>
                     <h2
-                        style="background-image:url(https://i.goopics.net/92AR3.jpg); background-size: cover; font-family:Arial; width:600px; height:50px; margin:auto; padding-top: 2%; text-align:center; color:white;font-size: 1.8em; ; text-shadow: 2px 2px 3px black">Les épisodes de vos séries préférées</h2>
+                        style="background-image:url(https://i.goopics.net/DmeDZ.jpg);  font-family:Arial; width:600px; height:50px; margin:auto; padding-top: 4%; text-align:center; color: #ff4140 ;font-size: 1.8em; ; text-shadow: 2px 2px 3px black">
+                        Les épisodes de vos séries préférées</h2>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <a href="#"> <img src="https://i.goopics.net/7oAjN.jpg" style="font-family:Arial; width:145px; height:220px; text-align:center; color:white;"/> </a>
-                    <a href="#"> <img src="https://i.goopics.net/AqELw.jpg" style="font-family:Arial; width:145px; height:220px; text-align:center; color:white;"/> </a>
-                    <a href="#"> <img src="https://i.goopics.net/b9Lv0.jpg" style="font-family:Arial; width:145px; height:220px; text-align:center; color:white;"/> </a>
-                    <a href="#"> <img src="https://i.goopics.net/nQDyJ.jpg" style="font-family:Arial; width:150px; height:220px; text-align:center; color:white;"/> </a>
+                    <a href="#"> <img src="https://i.goopics.net/7oAjN.jpg"
+                            style="font-family:Arial; width:145px; height:220px; text-align:center; color:white;" />
+                    </a>
+                    <a href="#"> <img src="https://i.goopics.net/AqELw.jpg"
+                            style="font-family:Arial; width:145px; height:220px; text-align:center; color:white;" />
+                    </a>
+                    <a href="#"> <img src="https://i.goopics.net/b9Lv0.jpg"
+                            style="font-family:Arial; width:145px; height:220px; text-align:center; color:white;" />
+                    </a>
+                    <a href="#"> <img src="https://i.goopics.net/nQDyJ.jpg"
+                            style="font-family:Arial; width:150px; height:220px; text-align:center; color:white;" />
+                    </a>
                 </td>
             </tr>
         </tbody>
@@ -394,56 +404,63 @@
     <table>
         <tbody>
             <tr>
-                <td style="text-align: center;">
-                    <p style="color:#ff4140; font-weight:bolder;"> Nouveauté exclus 2018</p>
+                <td style="text-align: center;"> 
+                    <p style="color:#737373; font-size:15px;font-weight: bolder;"> Ajout Episode 16 Saison 9</p>
                 </td>
                 <td style="text-align: center;">
-                    <p style="color:#ff4140; font-weight:bolder;"> Nouveauté exclus 2018</p>
+                    <p style="color:#737373; font-weight: bolder;"> Ajout Episode 12 Saison 16</p>
                 </td>
                 <td style="text-align: center;">
-                    <p style="color:#ff4140; font-weight:bolder;"> Nouveauté exclus 2018</p>
+                    <p style="color:#737373; font-weight: bolder;"> Ajout Episode 15 Saison 3</p>
                 </td>
                 <td style="text-align: center;">
-                    <p style="color:#ff4140; font-weight:bolder;"> Nouveauté exclus 2019</p>
+                    <p style="color:#737373; font-weight: bolder;"> Ajout Episode 25 Saison 15</p>
                 </td>
             </tr>
         </tbody>
     </table>
-<!--section horreur-->
+    <!--section horreur-->
     <table>
         <tr>
         <tr>
-                <td
+            <td
                 style="background-image: url(https://i.goopics.net/rY41D.jpg); background-size: cover; font-family:Arial; width:600px; height:326px; margin:auto; text-align:center; color:white;">
-                <a href="#" style="text-decoration: none; color:white;"><p style="font-size: 1.7em;">Tous les vendredis 3 films d'horreur à la suite !!!</p></a>
-        </td>
-       
-    </tr>
+                <a href="#" style="text-decoration: none; color:white;">
+                    <p style="font-size: 1.7em; text-shadow: 3px 2px 1px black;">Tous les vendredis 3 films d'horreur à la suite !!!</p>
+                </a>
+            </td>
+
+        </tr>
         </tr>
     </table>
-<!--Les promo du passé-->
+    <!--Les promo du passé-->
     <table>
         <tr>
         <tr>
-                <h2
-                style="background-image:url(https://i.goopics.net/koqwp.jpg); font-family:Arial; width:600px; height:50px; margin:auto; padding-top: 2%; text-align:center; color:white;font-size: 1.8em; ; text-shadow: 2px 2px 3px black">Les promos du passé</h2>
+            <h2
+                style="background-image:url(https://i.goopics.net/koqwp.jpg); font-family:Arial; width:600px; height:50px; margin:auto; padding-top: 2%; text-align:center; color:white;font-size: 1.8em; ; text-shadow: 2px 2px 3px black">
+                Les promos du passé</h2>
         </tr>
         </tr>
         <tr>
             <td>
-                <a href="#"> <img src="https://i.goopics.net/nQ9W1.jpg" style="font-family:Arial; width:145px; height:220px; text-align:center; color:white;"/> </a>
-                <a href="#"> <img src="https://i.goopics.net/92A43.jpg" style="font-family:Arial; width:145px; height:220px; text-align:center; color:white;"/> </a>
-                <a href="#"> <img src="https://i.goopics.net/Xjngp.jpg" style="font-family:Arial; width:145px; height:220px; text-align:center; color:white;"/> </a>
-                <a href="#"> <img src="https://i.goopics.net/deAkL.jpg" style="font-family:Arial; width:145px; height:220px; text-align:center; color:white;"/> </a>
+                <a href="#"> <img src="https://i.goopics.net/nQ9W1.jpg"
+                        style="font-family:Arial; width:145px; height:220px; text-align:center; color:white;" /> </a>
+                <a href="#"> <img src="https://i.goopics.net/92A43.jpg"
+                        style="font-family:Arial; width:145px; height:220px; text-align:center; color:white;" /> </a>
+                <a href="#"> <img src="https://i.goopics.net/Xjngp.jpg"
+                        style="font-family:Arial; width:145px; height:220px; text-align:center; color:white;" /> </a>
+                <a href="#"> <img src="https://i.goopics.net/deAkL.jpg"
+                        style="font-family:Arial; width:145px; height:220px; text-align:center; color:white;" /> </a>
             </td>
         </tr>
     </table>
-<!--Footer-->    
+    <!--Footer-->
     <table style="background-color: black; width:100%;">
         <tbody>
             <tr>
                 <td style="padding-top:10px; padding-bottom:5px; text-align:center;">
-                    <span style="font-family: Arial; font-size: 15px; letter-spacing: 1; color: white;">
+                    <span style="font-family: Arial; font-size: 15px; letter-spacing: 1; color: white;  text-shadow: 3px 2px 1px black;">
                         Rejoignez-nous sur : </span>
                 </td>
             </tr>
@@ -452,16 +469,16 @@
                     <table style="width:100%;">
                         <tbody>
                             <tr>
-                                <td style="padding-right: 0px; padding-left: 0px; width: 100%; text-align: center;">
-                                    <p> <img class="facebook" src="assets/img/font/Facebook.jpg"
-                                            style="width: 30px; height: 30px;               border-radius:20px;">
-                                        <img class="twitter" src="assets/img/font/twitter.jpg"
+                                <td style="width: 100%; text-align: center;">
+                                    <p> <img class="facebook" src="https://i.goopics.net/WDaQr.jpg"
+                                            style="width: 30px; height: 30px;border-radius:20px;">
+                                        <img class="twitter" src="https://i.goopics.net/QljmV.jpg"
                                             style="width: 30px; height: 30px; border-radius:20px;">
-                                        <img class="youtube" src="assets/img/font/youtube.jpg"
+                                        <img class="youtube" src="https://i.goopics.net/1oPXo.jpg"
                                             style="width: 30px; height: 30px; border-radius:20px;">
-                                        <img class="linkedin" src="assets/img/font/linkedin.jpg"
+                                        <img class="linkedin" src="https://i.goopics.net/loVmp.jpg"
                                             style="width: 30px; height: 30px; border-radius:20px;">
-                                        <img class="google+" src="assets/img/font/google+.jpg"
+                                        <img class="google+" src="https://i.goopics.net/b9pgK.jpg"
                                             style="width: 30px; height: 30px; border-radius:20px;">
                                     </p>
                                 </td>
@@ -502,6 +519,24 @@
                                     text-align: center;">
                                     <a href="#" style="color:cyan; text-decoration: none;"> Se
                                         désabonner de la Newsletter </a>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <table>
+                        <tbody>
+                            <tr>
+                                <td style="padding-right: 0px; width: 100%; text-align: center;">
+                                    <p style="font-family: Arial; font-size: 13px; letter-spacing: 1; color: #ada9a9;"> Conformément à la loi du 8 décembre 1992 relative à la protection de la vie privée à l'égard du traitement de données à caractère personnel, vous disposez du droit d'accès, de rectification et de suppression des données vous concernant. </p>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <table>
+                        <tbody>
+                            <tr>
+                                <td style="padding-right: 0px; width: 100%; text-align: center;">
+                                    <p style="font-family: Arial; font-size: 13px; letter-spacing: 1; color: #ada9a9;">Par notre intermédiaire, vous pouvez être amené(e) à recevoir des propositions commerciales en provenance de tiers. Si vous ne le souhaitez pas, il vous suffit de nous écrire à l'aide de notre formulaire en ligne dans la rubrique "Contact" ou par courrier à en précisant vos nom, prénom, adresse complète et numéro de client à : BeCode - Quai Arthur Rimbaud 10 - 6000 Charleroi</p>
                                 </td>
                             </tr>
                         </tbody>
