essai de differente couleur

--- a/newsletter.html
+++ b/newsletter.html
@@ -72,9 +72,9 @@
                 </table>
                 <table>
                     <tbody>
-                        <tr>
+                        <tr style="background-image: url(https://helpx.adobe.com/content/dam/help/en/stock/how-to/visual-reverse-image-search/jcr_content/main-pars/image/visual-reverse-image-search-v2_intro.jpg)">
                             <td style="text-align: center;"> 
-                                <p style="color:#ff4140; font-weight: bolder;"> Ajout Episode 16 Saison 9</p>
+                                <p style="color:#ff4140; font-size:15px;font-weight: bolder;"> Ajout Episode 16 Saison 9</p>
                             </td>
                             <td style="text-align: center;">
                                 <p style="color:#ff4140; font-weight: bolder;"> Ajout Episode 12 Saison 16</p>
@@ -159,12 +159,11 @@
                                         <table style="width: 100%;">
                                             <tbody>
                                                 <tr>
-                                                    <td style="padding-right: 0px; padding-left: 0px; width: 100%;
-                                                text-align: center;">
-                                                        <p> <a href="#" style="color:#0d76bd; text-decoration: none;">
+                                                    <td style="padding-right: 0px; width: 100%; text-align: center;">
+                                                        <p> <a href="#" style="color:#0d76bd; padding-right:80px; text-decoration: none;">
                                                                 Mention légal</a>
                                                             <a href="#"
-                                                                style="color:#0d76bd; margin-left:50px; text-decoration: none;">
+                                                                style="color:#0d76bd; margin-left:40px; text-decoration: none;">
                                                                 Sécurité </a> </p>
                                                     </td>
                                                 </tr>
@@ -177,6 +176,24 @@
                                                 text-align: center;">
                                                         <a href="#" style="color:cyan; text-decoration: none;"> Se
                                                             désabonner de la Newsletter </a>
+                                                    </td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                        <table>
+                                            <tbody>
+                                                <tr>
+                                                    <td style="padding-right: 0px; width: 100%; text-align: center;">
+                                                        <p style="font-family: Arial; font-size: 13px; letter-spacing: 1; color: white;"> Conformément à la loi du 8 décembre 1992 relative à la protection de la vie privée à l'égard du traitement de données à caractère personnel, vous disposez du droit d'accès, de rectification et de suppression des données vous concernant. </p>
+                                                    </td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                        <table>
+                                            <tbody>
+                                                <tr>
+                                                    <td style="padding-right: 0px; width: 100%; text-align: center;">
+                                                        <p style="font-family: Arial; font-size: 13px; letter-spacing: 1; color: white;">Par notre intermédiaire, vous pouvez être amené(e) à recevoir des propositions commerciales en provenance de tiers. Si vous ne le souhaitez pas, il vous suffit de nous écrire à l'aide de notre formulaire en ligne dans la rubrique "Contact" ou par courrier à en précisant vos nom, prénom, adresse complète et numéro de client à : BeCode - Quai Arthur Rimbaud 10 - 6000 Charleroi</p>
                                                     </td>
                                                 </tr>
                                             </tbody>
